Refine hero layout (name and subtitle under photo); subtitle split and wording; projects rebuilt with case studies; about core skills expanded; contact spam protection; smooth scrolling and anchor offsets; SEO meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Deborshi Dey — Data Scientist</title>
+    <title>Deborshi Dey — Data Scientist | Misinfo and Geopolitical Analyst</title>
+    <meta name="description" content="Portfolio of Deborshi Dey — Data Scientist focused on ML, NLP, and OSINT. Projects, resume, and contact." />
+    <meta property="og:title" content="Deborshi Dey — Data Scientist | Misinfo and Geopolitical Analyst" />
+    <meta property="og:description" content="Turning complex signals into actionable insights using Python, ML, and interactive data visualizations." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/Gemini_Generated_Image_e2zukke2zukke2zu.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Deborshi Dey — Data Scientist | Misinfo and Geopolitical Analyst" />
+    <meta name="twitter:description" content="Turning complex signals into actionable insights using Python, ML, and interactive data visualizations." />
+    <meta name="twitter:image" content="/Gemini_Generated_Image_e2zukke2zukke2zu.png" />
     <script type="module">
       if (import.meta.hot?.on) {
         import.meta.hot.on('vite:error', (error) => {
@@ -19,6 +28,19 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Deborshi Dey",
+        "jobTitle": "Data Scientist",
+        "email": "mailto:daeizhere@gmail.com",
+        "sameAs": [
+          "https://github.com/DeborshiDey",
+          "https://www.linkedin.com/in/daeizhere/"
+        ]
+      }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
