Update favicon to custom logo; refine hero alignment and spacing; expand About section width/padding; explain IDE preview badge

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="twitter:title" content="Deborshi Dey — Data Scientist | Misinfo and Geopolitical Analyst" />
     <meta name="twitter:description" content="Turning complex signals into actionable insights using Python, ML, and interactive data visualizations." />
     <meta name="twitter:image" content="/Gemini_Generated_Image_e2zukke2zukke2zu.png" />
+    <style>
+      #trae-banner, .trae-banner, .trae-ad, .trae-overlay { display: none !important; }
+    </style>
     <script type="module">
       if (import.meta.hot?.on) {
         import.meta.hot.on('vite:error', (error) => {
